conclusão do curso de flex_box

--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
             <li></li>
             <li></li>
           </ul>
-          
         </div>
         <div class="widget images">
           <strong><img src="images/images.svg" alt="Images"> 266 photos and videos</strong>  
@@ -109,12 +108,96 @@
       </aside>
 
      <section class="timeline">
-      timeline
+      <nav>
+        <a href="" class="active">Tweets</a>
+        <a href="">Tweets and replies</a>
+        <a href="">Medias</a>
+      </nav>
+      <ul class="tweets">
+        <li>
+          <img src="images/avatar.png" alt="Avatar">
+          <div class="info">
+            <strong>Mateus bruno <span>@Exibir</span></strong>
+            <p>Teste de Twitte Teste de Twitte Teste de Twitte Teste de Twitte</p>
+            <div class="actions">
+              <a href=""><img src="images/comments.svg" alt="comments">3</a>
+              <a href=""><img src="images/retweet.svg" alt="retweet">3</a>
+              <a href=""><img src="images/like.svg" alt="likes">2</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="images/avatar.png" alt="Avatar">
+          <div class="info">
+            <strong>Mateus bruno <span>@Exibir</span></strong>
+            <p>Teste de Twitte Teste de Twitte Teste de Twitte Teste de Twitte</p>
+            <div class="actions">
+              <a href=""><img src="images/comments.svg" alt="comments">3</a>
+              <a href=""><img src="images/retweet.svg" alt="retweet">3</a>
+              <a href=""><img src="images/like.svg" alt="likes">2</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="images/avatar.png" alt="Avatar">
+          <div class="info">
+            <strong>Mateus bruno <span>@Exibir</span></strong>
+            <p>Teste de Twitte Teste de Twitte Teste de Twitte Teste de Twitte</p>
+            <div class="actions">
+              <a href=""><img src="images/comments.svg" alt="comments">3</a>
+              <a href=""><img src="images/retweet.svg" alt="retweet">3</a>
+              <a href=""><img src="images/like.svg" alt="likes">2</a>
+            </div>
+          </div>
+        </li>
+
+      </ul>
      </section>
 
      <aside class="widgets">
-      widgets
-     </aside>
+      <div class="widget"></div>
+      <div class="widget follow">
+        <div class="title">
+          <strong>Who to Follow</strong>
+          <a href="">Refresh</a>
+          <a href="">View all</a>
+        </div>
+        <ul>
+          <li>
+            <div class="profile">
+              <img src="images/avatar.png" alt="Avatar">
+              <div class="info">
+                <strong>Spade <span>@space_be</span></strong>
+                <button>Follow</button>
+              </div>
+            </div>
+            <a href="">x</a>      
+          </li>
+          <li>
+            <div class="profile">
+              <img src="images/avatar.png" alt="Avatar">
+              <div class="info">
+                <strong>Spade <span>@space_be</span></strong>
+                <button>Follow</button>
+              </div>
+            </div>
+            <a href="">x</a>      
+          </li>
+          <li>
+            <div class="profile">
+              <img src="images/avatar.png" alt="Avatar">
+              <div class="info">
+                <strong>Spade <span>@space_be</span></strong>
+                <button>Follow</button>
+              </div>
+            </div>
+            <a href="">x</a>      
+          </li>
+
+        </ul>
+        
+      </div>
+    </aside>
    </div>
 
   
